tests/gateway-api-migration/fixtures/master-minion-ambiguous/input/common.ingress/base/app.ingress-b.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-b
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress/mergeable-ingress-type: master
spec:
  rules:
    - host: dev-argocd.example.com
  tls:
    - hosts:
        - dev-argocd.example.com
      secretName: dev-argocd-tls-b
