tests/gateway-api-migration/fixtures/master-minion-ambiguous/input/common.ingress/base/kustomization.yaml
---
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: ingress-nginx
resources:
  - app.ingress-a.yaml
  - app.ingress-b.yaml
